--- a/src/settings.json
+++ b/src/settings.json
@@ -3,6 +3,6 @@
   "navbar": true,
   "menu": true,
   "footer": true,
-  "themeColor": "#165DFF",
+  "themeColor": "#61a716",
   "menuWidth": 220
 }
