:lipstick: 修改主题色

--- a/src/settings.json
+++ b/src/settings.json
@@ -3,6 +3,6 @@
   "navbar": true,
   "menu": true,
   "footer": true,
-  "themeColor": "#61a716",
+  "themeColor": "#01ab5d",
   "menuWidth": 220
 }
